--- a/style.css
+++ b/style.css
@@ -1,17 +1,71 @@
 :root {
-  --main-color: #93d6f552;
+  --main-color: #49addbd2;
   --primary-light: #adffff;
   --primary-dark: #091034;
   --gray: #f9fbff;
   --background: #060b23;
   --box-size: border-box;
+  --text-color: white;
 }
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+}
+
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1.2rem;
+  background-color: var(--background);
+  color: var(--text-color);
+  align-items: center;
+  justify-content: space-around;
+}
+.form {
+  width: 50%;
+  position: relative;
+  margin-top: 30px;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  margin: 20px;
+  background-color: var(--background);
+  color: var(--gray);
+  font-family: inherit;
+  font-size: inherit;
+  border-radius: 10px;
+  border: none;
+  border-bottom: 1px solid var(--main-color);
+  outline-width: 0;
+}
+
+.form-label {
+  position: absolute;
+  bottom: 0px;
+  top: 5px;
+  left: 25px;
+  width: 100%;
+  height: 100%;
+  color: var(--gray);
+  pointer-events: none;
+}
+
+.form-label::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
 }
 
 .section {
@@ -23,10 +77,20 @@
 }
 
 .card {
-  width: 50%;
-  box-shadow: rgba(0, 0, 0, 0.322) 0px 3px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: auto;
   background-color: var(--main-color);
   border-radius: 25px;
   margin-top: 25px;
   padding: 20px;
+}
+.add {
+  width: 15%;
+  height: 45px;
+  border: none;
+  border-radius: 5px;
+  font-family: inherit;
+  font-size: large;
 }
