--- a/style.css
+++ b/style.css
@@ -24,8 +24,10 @@ body {
 }
 .form {
   width: 50%;
-  position: relative;
+  position: sticky;
+  top: 0;
   margin-top: 30px;
+  z-index: 999;
 }
 
 .input {
@@ -41,24 +43,6 @@ body {
   border: none;
   border-bottom: 1px solid var(--main-color);
   outline-width: 0;
-}
-
-.form-label {
-  position: absolute;
-  bottom: 0px;
-  top: 5px;
-  left: 25px;
-  width: 100%;
-  height: 100%;
-  color: var(--gray);
-  pointer-events: none;
-}
-
-.form-label::after {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 100%;
 }
 
 .container {
@@ -88,23 +72,11 @@ body {
   padding: 20px;
   overflow: hidden;
   opacity: 0;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .card:hover {
   width: 550px;
-}
-
-.card.animate {
-  transform: scale(1);
-}
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
 
 .add {
@@ -115,7 +87,7 @@ body {
   font-family: inherit;
   font-size: large;
   cursor: pointer;
-  transition: all 0.7s ease-in-out;
+  transition: all 0.4s ease-in-out;
   background-color: #e3fafa;
 }
 
